--- a/PosgrIQ/Properties/Resources.resx
+++ b/PosgrIQ/Properties/Resources.resx
@@ -130,4 +130,7 @@
   <data name="UISLogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UISLogo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="hour_glass_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hour-glass-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
